added an option to print reviews like with an ink printer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.ReviewLifeRepeat"
         tools:targetApi="31">
         <activity
+            android:name=".PrintReviewsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ListPastReviewsActivity"
             android:exported="false" />
         <activity
